--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,7 +89,8 @@
         "ostream": "c",
         "camera_system.h": "c",
         "render_view_skybox.h": "c",
-        "asserts.h": "c"
+        "asserts.h": "c",
+        "application.h": "c"
     },
     // File copyright documentation tag.  Array of strings will be converted to one line per element.  Can template {year}.
     "doxdocgen.file.copyrightTag": [
