--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,7 +90,8 @@
         "camera_system.h": "c",
         "render_view_skybox.h": "c",
         "asserts.h": "c",
-        "application.h": "c"
+        "application.h": "c",
+        "entry.h": "c"
     },
     // File copyright documentation tag.  Array of strings will be converted to one line per element.  Can template {year}.
     "doxdocgen.file.copyrightTag": [
